Tabs_N_Blanks/css/shop.css
/*
  A CSS stylesheet created from Tabs N' Blanks, a hypothetical store selling 3D woodcraft puzzles, for the purpose of a web design course project

  CREATED BY: IAT339 D101 WINONA HUANG 301165181
                          JOANNE GOH 301140652;
*/

*, *:after, *:before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
} 


/* 
  FILTER MENU TOGGLE
*/

  /* HIDDEN BY DEFAULT */
  .grid-col-2of10.filter-toggle {
    text-align: center;

    width: 20%;
    display: none;
    padding-right: 0;
  }


/*
  FILTER MENU 
*/

  .filter-menu {
  	margin-top: 3em;
    padding-left: 5em;
  }

  .filter-menu ul {
  	margin-bottom: 2em;
    padding-left: 0;
  }

  .filter-menu li {
    list-style-type: none;
    padding: 0;
    margin: 0;
    margin-bottom: 0.5em;   
  }

  .filter-menu li a {
    font-family: AGaramond-Regular;
    font-size: 0.75rem;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    color: #7D7D7D;
    text-decoration: none;
    }

  .filter-menu li a:hover {
    color: #C1B087;
  } 

  .filter-menu li a:active {
    color: #C1B087;
  } 



/*
  PRODUCT LISTING 
*/

  .product-listing {
    /*margin: 0 auto;*/
    margin-top: 3em;
/*    overflow: auto;
    float: left;*/
    padding-left: 6em;
    padding-bottom: 5em; /* avoid the view more button border bottom getting cut off by the footer*/
    text-align: center;
  }
     
  .product-listing ul {
    list-style-type: none;
    overflow: auto;
    margin-top: 0;
    padding: 0;
  }

  .product-listing li {
    padding: 0 0.5em 0.5em 0.5em;
/*    overflow: auto;*/
    float: left;
    margin-bottom: 1.5em;
    
  }

  .product-listing li a {
    display: block;
  }

  .product-listing li img {
    width: auto;
    text-align: center;
    margin-bottom: 0.5em;
  }

  .product-listing .button-default {
    margin-right: 6em;
  }

  .product-listing ul li h3 {
    text-align: left;
  }

  .product-listing ul li h4 {
    font-size: 0.70rem;
    text-align: left;
  }


  /* 
    RESPONSIVE for .filter-menu and product-listing
  */


    /* filter menu + 2 imgs (shrinking 8-col grid)*/

    @media (max-width: 65.25em) {

      .product-listing {
        padding-left: 4em;
      }

      .product-listing.grid-col-8of10 {
        width: 70%;
      }

    }

    /* filter menu + 2 imgs */
    @media (max-width: 54.875em) {

      .filter-menu {
        padding-left: 3em;
      }

      .filter-menu.grid-col-2of10 {
        width: 25%;
      }

      .product-listing.grid-col-8of10 {
        padding-left: 0;
      }

    }

    @media (max-width: 52.063em) {

      .product-listing.grid-col-8of10 {
        width: 75%;
        padding-left: 2em;
      }

    }

    /* filter menu + single img */
    @media (max-width: 48.625em) {

      .filter-menu {
        padding-left: 4em;
      }

      .filter-menu.grid-col-2of10 {
        width: 30%;
      }

      .product-listing.grid-col-8of10 {
        width: 70%;
        padding-left: 4em;
      }

      .product-listing a.button-default {
        float: left;
        margin-left: 3.5em;
      }

    }

    /* When navigation menu changes to single column; filter menu to be changed to toggle+modal */

  @media (max-width: 34.438em) {
      
    .filter-toggle.grid-col-2of10 {
      width: 100%;
      display: block;
      padding: 1em 0 2em 0;
    }

    .filter-menu.grid-col-2of10 {
      display: none;
    }

    .product-listing.grid-col-8of10 {
      width: 100%;
      padding-left: 8em;
    }

   .product-listing ul li h3 { 
      text-align: center;
    }

    .product-listing ul li h4 {
      text-align: center;
    }

   }

  @media (max-width: 26.5em) {

    .product-listing.grid-col-8of10 {
      padding-left: 4em;
    }

   }

  @media (max-width: 23.25em) {
    .product-listing.grid-col-8of10 {
      padding-left: 2.5em;
    }

   }

